Allow topics to be registered with lower case for kafka compability
Issue-ID: POLICY-4402
Change-Id: Ia2fabc3eed64bc8ecbdf1ab048a2101ee31daf04
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>